[package]
name = "rust_neural_net"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.1", features = [
  "chrono",
  "sqlite",
  "runtime-async-std",
] }
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
ta = "0.5.0"
plotters = "0.3.3"
itertools = "0.13.0"